successfully intalled uuid

--- a/src/styles/invoiceGenerator.module.scss
+++ b/src/styles/invoiceGenerator.module.scss
@@ -1,11 +1,10 @@
 .modalInvoiceGen{
-    
     .modalBody{
-
         .cancelButton{
             background-color: black;
             border: 1px solid black;
             color: white;
+            height: 38px;
 
             &:hover{
                 box-shadow: 0 4px 15px rgba(80, 77, 70, 0.5);
@@ -20,7 +19,6 @@
 
             &:hover{
                 box-shadow: 0 4px 15px rgba(90, 169, 193, 0.5);
-                // background-color: black;
             }
         }
     }
