--- a/src/styles/priceBuilderModal.css
+++ b/src/styles/priceBuilderModal.css
@@ -1,9 +1,8 @@
-.modal-content{
-    border-radius: 5px;
+.modal-content {
+	border-radius: 5px;
 }
 
-.modal-content .modal-header .btn-close{
-    background-color: #EAB613;
-    border: 1px solid black;
+.modal-content .modal-header .btn-close {
+	background-color: #eab613;
+	border: 1px solid black;
 }
-
